fix scrollbars

--- a/source/_assets/css/game.css
+++ b/source/_assets/css/game.css
@@ -273,8 +273,7 @@
 
 .asset-panel-items.flexed {
   padding: 0.3vh 2.5vh;
-  overflow-x: scroll;
-  overflow-y: hidden;
+  overflow: hidden;
   flex-wrap: nowrap;
   white-space: nowrap;
 }
@@ -483,7 +482,7 @@
 }
 
 .asset-details-pane-desc {
-  overflow: scroll;
+  overflow: overlay;
   margin: 1vh;
   margin-bottom: auto;
   font-size: 1vw !important;
@@ -492,7 +491,7 @@
 }
 
 .asset-details-pane-body-bottom {
-  overflow: scroll;
+  overflow: overlay;
   width: 100%;
   height: 100%;
   padding: 1vh 1vw;
@@ -737,7 +736,7 @@
   /* min-height: 15vh; */
   /* max-height: 25vh; */
   /* flex-grow: 1; */
-  overflow: scroll;
+  overflow: overlay;
 }
 
 .parent-div-with-subtext {
